--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <body onload="start()">
   <h1>HPECTY</h1>
   <div class="region" id="blocklyDiv"></div>
-  <button onclick="executeCode()">Execute the Jason code below</button>
+  <button onclick="executeCode()">Download</button>
   <div class="region">
-    <textarea id="generatedCodeContainer" readonly placeholder="Generated Jason will go here..."></textarea>
+    <textarea id="generatedCodeContainer" readonly placeholder="Generated Json will go here..."></textarea>
   </div>
 </body>
 
